
Wed Feb 21 17:33:30 CET 2007

	- Removed superfluous quotation from wd_keepalive.c.
	- Added sourceforge as new primary archive site.

Thu Feb 22 11:48:57 CET 2007

	- Released 5.3.1.

Thu, 26 Apr 2007 15:08:07 +0200

	- Added "another-chance" repair script written by Erik Rossen
	  <rossen@prolibre.com>.

Tue, 29 May 2007 16:34:34 +0200

	- Applied some changes to RedHat init script.
	- Added sysconf script for RedHat.

Fri, 17 Aug 2007 11:15:08 +0200

	- Made wd_keepalive honor config file option.
	- Added wd_keealive manpage.
	- Made wd_keepalive not start without a watchdog device.
	- Fixed some typos in watchdog manpage.
	- Updated Debian files.
	- Released 5.4

Mon, 14 Jan 2008 13:57:34 +0100

	- Check for existance before usage of sendmail.

Wed, 11 Feb 2009 15:00:48 +0100

	- Added patch by Jan Rouš <jaro@koukaam.se> to prevent rare segfault on
	  shutdown.

Wed, 25 Feb 2009 10:27:35 +0100

	- Added patch by Enrique Zanardi <ezanardi@atlantux.com> to let repair
	  binary know more about the failing test.
	- Expanded that patch to work for more tests.
	- Released version 5.5

Tue,  3 Mar 2009 14:59:55 +0100

	- Added patch by Enrique Zanardi <ezanardi@atlantux.com> to
	  check for the source of the ping reply packets.

Thu, 12 Mar 2009 14:36:01 +0100

	- Added patch by Lon Hohberger <lhh@redhat.com> to allow configuration
	  of timeouts.
	- Added another patch by Lon Hohberger <lhh@redhat.com> to make sure
	  signal handler does not call not-signal safe functions.
	- Made wd_keepalive accept all options watchdog accepts and not throw
	  errors on those it does not use itself.

Fri, 13 Mar 2009 12:26:40 +0100

	- Made watchdog not close the watchdog device so early when trying a
	  normal shutdown. This ensures a reset even if the system hangs while
	  doing this.
	- Applied patch by Richard W.M. Jones <rjones@redhat.com> to cleanup
	  code base for gcc-4.4.

Sun, 22 Mar 2009 14:33:21 +0100

	- Some more bugfixes by me and Lon.
	- Released 5.6