@@ -473,3 +473,9 @@ Sun, 22 Mar 2009 14:33:21 +0100
 
 	- Some more bugfixes by me and Lon.
 	- Released 5.6
+
+Mon, 25 May 2009 02:46:32 +0200
+
+	- Allow config lines with arbitrary length.
+	
+	
